# vehicle_test_analysis

./: .coverage  README.md  debug_indicator.py  install.bat  pyproject.toml  requirements.txt  run.bat  start.bat  start_with_login.bat  stop.bat  test_hex_dbc.py
config/: app_config.yaml  default_settings.yaml
docs/: requirements.md
src/: __init__.py  main.py
src/analyzers/: __init__.py  functional_analyzer.py  performance_analyzer.py
src/core/: __init__.py  auth.py  indicator_engine.py  time_sync.py
src/database/: __init__.py  models.py  operations.py
src/parsers/: __init__.py  base_parser.py  can_parser.py  csv_parser.py  dbc_parser.py  excel_parser.py  mdf_parser.py
src/report/: __init__.py  pdf_report.py  word_report.py
src/ui/: __init__.py  login_dialog.py  main_window.py
src/ui/dialogs/: __init__.py  analysis_dialog.py  project_dialog.py  report_dialog.py
tests/: conftest.py
tests/integration/: __init__.py  test_can_dbc_integration.py  test_integration.py  test_mdf_integration.py  test_parser_indicator_integration.py  test_time_sync_integration.py
tests/test_data/: README.md
tests/unit/: test_analyzers.py  test_can_parser.py  test_csv_parser.py  test_database.py  test_dbc_parser.py  test_indicator_engine.py  test_main.py  test_mdf_parser.py  test_models.py  test_operations.py  test_report.py  test_time_sync.py  test_ui.py
vehicle_test_analysis.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
